added title and comments

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My Webpage</title>
 </head>
     <!-- Metadata goes here -->
 <body>
+    <!-- CTRL + / = Comment -->
     <!-- Content Goes here-->
     <h1>Hello, World!</h1>
 </body>
