added lorem as h2

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <!-- CTRL + / = Comment -->
     <!-- Content Goes here-->
     <h1>Hello, World!</h1>
+    <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos perferendis, ipsum hic eum odio molestias unde, eveniet nisi nobis vel nemo. Minus totam odio accusantium consequuntur! Iusto, necessitatibus. Accusamus, fugit!</h2>
 </body>
 </html>
