added content/elements to index.html

--- a/index.html
+++ b/index.html
@@ -8,8 +8,45 @@
     <!-- Metadata goes here -->
 <body>
     <!-- CTRL + / = Comment -->
-    <!-- Content Goes here-->
+    <!-- Headings and paragraphs-->
     <h1>Hello, World!</h1>
-    <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos perferendis, ipsum hic eum odio molestias unde, eveniet nisi nobis vel nemo. Minus totam odio accusantium consequuntur! Iusto, necessitatibus. Accusamus, fugit!</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos perferendis, ipsum hic eum odio molestias unde, eveniet nisi nobis vel nemo. Minus totam odio accusantium consequuntur! Iusto, necessitatibus. Accusamus, fugit!</p>
+
+    <h2>Headings</h2>
+    <p>Headings deine the outline of your site. There are six levels of headings.</p>
+
+    <H3>Lists</H3>
+    <!-- Unordered Lists -->
+    <ul>
+        <li>Add a "ul" element  (it stands for unordered list)</li>
+        <li>Add each item in its own "li" element</li>
+        <li>They don't need to be in any particular order.</li>
+    </ul>
+
+    <!-- Ordered List -->
+    <p>This is what an ordered list looks like:</p>
+    <ol>
+        <li>Notice the new "ol" element wrapping everything</li>
+        <li>But, the list item elements are the same</li>
+        <li>Also note how the numbers increment on their own</li>
+        <li>You should be noticing things in this precise order, because this is an ordered list</li>
+    </ol>
+    <!-- Inline elements -->
+    <h3>Inline Elements</h3>
+    <p>
+        <em>Sometimes</em>, you need to draw attention to a particular word or phrase
+    </p>
+    <p>Other time you need to <strong>strong</strong>ly emphasize the importance of a word or phrase.</p>
+
+    <h3>Empty Elements</h3>
+    <p>Thanks for reading! HTML should be easier now.</p>
+    <p>Regards, <br/>
+        John Michael
+    </p>
+    
+    <hr/>
+
+    <p>P.S This page look like crap, but we'll fix that with some CSS soon.</p>
+
 </body>
 </html>
