--- a/02-links_and_images/index.html
+++ b/02-links_and_images/index.html
@@ -9,7 +9,9 @@
     <h1>This particular page is about links!</h1>
     <ul>
         <li>Absolute links, like to <a href="https://developer.mozilla.org/en-US/" target="_blank">Mozilla Developer Network</a>, which is a very good resource for web developers.</li>
+        <li>Relative links, like to our <a href="images.html">images</a> page.</li>
         <li>Relative links, like to our <a href="misc\extras.html">extras</a> page.</li>
+        
     </ul>
 
 </body>
