--- a/02-links_and_images/images.html
+++ b/02-links_and_images/images.html
@@ -1,27 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Images</title>
-</head>
-<body>
-    <h2>This page covers common image formats, but you may also be looking for <a href="index.html">links</a> and useful <a href="misc/extras.html">extras</a>.</h2>
+  </head>
+  <body>
+    <h2>
+      This page covers common image formats, but you may also be looking for
+      <a href="index.html">links</a> and useful
+      <a href="misc/extras.html">extras</a>.
+    </h2>
 
     <h3>JPGs</h3>
     <p>JPG images are good for photos.</p>
-    <img src="images/mochi.jpg" alt="An image of a gradient mochi"/>
+    <img src="images/mochi.jpg" alt="An image of a gradient mochi" />
 
     <h3>GIFs</h3>
     <p>GIFs are good for animations.</p>
-    <img src="images/mochi.gif" alt="An image of a moving mochi"/>
+    <img src="images/mochi.gif" alt="An image of a moving mochi" />
 
     <h3>PNGs</h3>
     <p>PNGs are good for diagrams and icons.</p>
-    <img src="images/mochi.png" alt="An image of a mochi">
+    <img src="images/mochi.png" alt="An image of a mochi" />
 
     <h3>SVGs</h3>
     <p>SVGs are <strong>amazing</strong>. use them wherever you can.</p>
-    <img src="images/mochi.svg" alt="An image of a mochi in SVG format">
-</body>
+    <img src="images/mochi.svg" alt="An image of a mochi in SVG format" />
+  </body>
 </html>
