--- a/02-links_and_images/misc/extras.html
+++ b/02-links_and_images/misc/extras.html
@@ -1,28 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Extras</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Extras</h1>
-    <p>This page is about miscellaneous HTML things, but you may also be interested in <a href="../index.html">links</a> or <a href="../images.html">images</a>.</p>
+    <p>
+      This page is about miscellaneous HTML things, but you may also be
+      interested in <a href="../index.html">links</a> or
+      <a href="../images.html">images</a>.
+    </p>
 
     <h2>Character Sets</h2>
     <p>You can use UTF-8 to count in Turkish</p>
     <ol>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
     </ol>
 
     <h2>Reserved Characters</h2>
-    <p>There are three reserved characters in HTML: &lt; &gt; and &amp;. You should always use HTML entities for these three characters.</p>
+    <p>
+      There are three reserved characters in HTML: &lt; &gt; and &amp;. You
+      should always use HTML entities for these three characters.
+    </p>
 
     <h2>Quotes</h2>
-    <p>If you&rsquo;re into &ldquo;web typography,&rdquo; you&rsquo;ll also find yourself using curly quotes quiet a bit.</p>
-</body>
+    <p>
+      If you&rsquo;re into &ldquo;web typography,&rdquo; you&rsquo;ll also find
+      yourself using curly quotes quiet a bit.
+    </p>
+  </body>
 </html>
