--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Navigation Links</title>
-</head>
-<body>
+  </head>
+  <body>
     <ul>
-        <!-- hello world -->
-        <li><a href="01-basic_web_page/index.html">01 - Basic Web Page</a></li> 
-        <!-- Index -->
-        <li><a href="02-links_and_images/">02 - Links and Images</a></li>
+      <!-- hello world -->
+      <li><a href="01-basic_web_page/index.html">01 - Basic Web Page</a></li>
+      <!-- Index -->
+      <li><a href="02-links_and_images/">02 - Links and Images</a></li>
     </ul>
-</body>
+  </body>
 </html>
