added 03-activity link on index file

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
       <li><a href="01-basic_web_page/index.html">01 - Basic Web Page</a></li>
       <!-- Index -->
       <li><a href="02-links_and_images/">02 - Links and Images</a></li>
+      <!-- first activity -->
+      <li><a href="03-activity/">First Activity</a></li>
     </ul>
   </body>
 </html>
