added back button at top of index files for easy navigation

--- a/01-basic_web_page/index.html
+++ b/01-basic_web_page/index.html
@@ -7,6 +7,7 @@
   </head>
   <!-- Metadata goes here -->
   <body>
+    <a href="../index.html">back</a>
     <!-- CTRL + / = Comment -->
     <!-- Headings and paragraphs-->
     <h1>Hello, World!</h1>
