--- a/02-links_and_images/index.html
+++ b/02-links_and_images/index.html
@@ -6,6 +6,7 @@
     <title>Links</title>
   </head>
   <body>
+    <a href="../index.html">back</a>
     <h1>This particular page is about links!</h1>
     <ul>
       <li>
