--- a/03-activity/index.html
+++ b/03-activity/index.html
@@ -6,6 +6,7 @@
     <title>Activity#1</title>
   </head>
   <body>
+    <a href="../index.html">back</a>
     <h1><a href="index.html">GrayTech Shop</a></h1>
     <img src="images/graytech.PNG" alt="Logo of Graytech" width="200" />
 
