added 04-semantic_html to index.html

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
       <li><a href="02-links_and_images/">02 - Links and Images</a></li>
       <!-- first activity -->
       <li><a href="03-activity/">First Activity</a></li>
+      <!-- Semantic HTML -->
+      <li><a href="04-semantic_html/">04 - Semantic HTML</a></li>
     </ul>
   </body>
 </html>
