--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
       <li><a href="03-activity/">First Activity</a></li>
       <!-- Semantic HTML -->
       <li><a href="04-semantic_html/">04 - Semantic HTML</a></li>
+      <!-- HTML FORM -->
+      <li><a href="05-html_forms/">05-HTML_forms</a></li>
     </ul>
   </body>
 </html>
