--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <!-- Index -->
       <li><a href="02-links_and_images/">02 - Links and Images</a></li>
       <!-- first activity -->
-      <li><a href="03-activity/">First Activity</a></li>
+      <li><a href="03-activity/">03-First Activity</a></li>
       <!-- Semantic HTML -->
       <li><a href="04-semantic_html/">04 - Semantic HTML</a></li>
       <!-- HTML FORM -->
