added new link on index.html

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
       <li><a href="04-semantic_html/">04 - Semantic HTML</a></li>
       <!-- HTML FORM -->
       <li><a href="05-html_forms/">05 - HTML_forms</a></li>
+      <!-- CSS foundations -->
+      <li><a href="06-css_foundations/">06 - css_foundations</a></li>
     </ul>
   </body>
 </html>
