added exercises 1 2 and 3 with css

--- a/06-css_foundations/index.html
+++ b/06-css_foundations/index.html
@@ -18,9 +18,9 @@
     <p>You can style unordered lists with the following bullets.</p>
 
     <ul>
-      <li>disc</li>
-      <li>circle</li>
-      <li>square</li>
+      <li><a href="exercise-1.html">exercise-1</a></li>
+      <li><a href="exercise-2.html">exercise-2</a></li>
+      <li><a href="exercise-3.html">extra-exercise</a></li>
     </ul>
 
     <p>And you can number ordered lists with the following:</p>
