added section to button on exercise-1

--- a/06-css_foundations/exercise-1.html
+++ b/06-css_foundations/exercise-1.html
@@ -9,6 +9,9 @@
   <body>
     <h1>Style me via the external method!</h1>
     <p>I would like to be styled with the internal method, please</p>
-    <button>Inline Method</button>
+
+    <section>
+      <button>Inline Method</button>
+    </section>
   </body>
 </html>
