created css selectors and activity

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <li><a href="05-html_forms/">05 - HTML_forms</a></li>
       <!-- CSS foundations -->
       <li><a href="06-css_foundations/">06 - css_foundations</a></li>
+      <li><a href="07-css_selectors/">07 - css_selectors</a></li>
     </ul>
   </body>
 </html>
