added lesson 8 and created css box model

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <!-- CSS foundations -->
       <li><a href="06-css_foundations/">06 - css_foundations</a></li>
       <li><a href="07-css_selectors/">07 - css_selectors</a></li>
+      <li><a href="08-css_box-model/">08 - css_box_model</a></li>
     </ul>
   </body>
 </html>
