--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <li><a href="06-css_foundations/">06 - css_foundations</a></li>
       <li><a href="07-css_selectors/">07 - css_selectors</a></li>
       <li><a href="08-css_box-model/">08 - css_box_model</a></li>
+      <li><a href="09-ccs_flexbos/">09 - css_flexbox</a></li>
     </ul>
   </body>
 </html>
