added new folder advanced positioning and example

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <li><a href="07-css_selectors/">07 - css_selectors</a></li>
       <li><a href="08-css_box-model/">08 - css_box_model</a></li>
       <li><a href="09-ccs_flexbos/">09 - css_flexbox</a></li>
+      <li><a href="10-advanced_positioning/">10 - advanced_positioning</a></li>
     </ul>
   </body>
 </html>
