added and completed ungraded exercise 9

--- a/09-ccs_flexbos/ungraded/index.html
+++ b/09-ccs_flexbos/ungraded/index.html
@@ -22,12 +22,12 @@
           <h1 class="hero-title">This website is awesome</h1>
           <p class="hero-info">
             This website has some subtext that goes here under the main title.
-            It's smaller font and the color is lower contrast
+            It's a smaller font and the color is lower contrast.
           </p>
           <button class="hero-btn">Sign Up</button>
         </div>
-        <div>
-          <img src="placeholder-img.PNG" alt="" />
+        <div class="hero-img">
+          <img class="hero-banner" src="placeholder-img.PNG" alt="" />
         </div>
       </main>
     </header>
@@ -36,35 +36,31 @@
       <h2 class="m-title">Some random information</h2>
       <section class="m-items">
         <div class="m-item">
-          <div class="m-pic">
-            <p class="m-info">
-              this is some subtext under an illustration or image
-            </p>
-          </div>
+          <div class="m-pic"></div>
+          <p class="m-info">
+            this is some subtext under an illustration or image
+          </p>
         </div>
 
         <div class="m-item">
-          <div class="m-pic">
-            <p class="m-info">
-              this is some subtext under an illustration or image
-            </p>
-          </div>
+          <div class="m-pic"></div>
+          <p class="m-info">
+            this is some subtext under an illustration or image
+          </p>
         </div>
 
         <div class="m-item">
-          <div class="m-pic">
-            <p class="m-info">
-              this is some subtext under an illustration or image
-            </p>
-          </div>
+          <div class="m-pic"></div>
+          <p class="m-info">
+            this is some subtext under an illustration or image
+          </p>
         </div>
 
         <div class="m-item">
-          <div class="m-pic">
-            <p class="m-info">
-              this is some subtext under an illustration or image
-            </p>
-          </div>
+          <div class="m-pic"></div>
+          <p class="m-info">
+            this is some subtext under an illustration or image
+          </p>
         </div>
       </section>
     </main>
