--- a/10-advanced_positioning/portfolio/index.html
+++ b/10-advanced_positioning/portfolio/index.html
@@ -5,8 +5,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portfolio</title>
     <link rel="stylesheet" href="styles.css" />
+    <script
+      src="https://kit.fontawesome.com/7520d132f7.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <header class="header-container">
+      <nav class="header-menu">
+        <ul class="header-items">
+          <li class="header-name"><h1>adamkeyes</h1></li>
+          <li class="header-icons">
+            <ul class="icons">
+              <li>
+                <i class="fa-brands fa-github fa-lg"></i>
+              </li>
+              <li>
+                <i class="fa-brands fa-facebook fa-lg"></i>
+              </li>
+              <li>
+                <i class="fa-brands fa-linkedin fa-lg"></i>
+              </li>
+              <li>
+                <i class="fa-brands fa-twitter fa-lg"></i>
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </nav>
+
+      <main class="hero-container">
+        <div class="hero-details">
+          <h2 class="hero-details-title">Nice to meet you! I'm Adam Keyes</h2>
+          <p class="hero-details-info">Based in UK, I'm a front-end developer passionate about building accessible web apps that users love.</p>
+          <a class="hero-contact" href="">CONTACT ME</a>
+        </div>
+        <div class="hero-image-container">
+          <img class="hero-image" src="https://hicarlodacuyan.github.io/portfolio-boilerplate/photo.jpg" alt="">
+        </div>
+      </main>
+    </header>
   </body>
 </html>
