added responsive design folder

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <li><a href="08-css_box-model/">08 - css_box_model</a></li>
       <li><a href="09-ccs_flexbos/">09 - css_flexbox</a></li>
       <li><a href="10-advanced_positioning/">10 - advanced_positioning</a></li>
+      <li><a href="11-responsive_design/">11 - Responsive Design</a></li>
     </ul>
   </body>
 </html>
