--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <li><a href="09-ccs_flexbos/">09 - css_flexbox</a></li>
       <li><a href="10-advanced_positioning/">10 - advanced_positioning</a></li>
       <li><a href="11-responsive_design/">11 - Responsive Design</a></li>
+      <li><a href="12-mp1_sample_project/">12 - MP1 Sample_Project</a></li>
     </ul>
   </body>
 </html>
