added project1 folder - contains sample project for mp1

--- a/project1/index.html
+++ b/project1/index.html
@@ -7,37 +7,114 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <!-- start of header -->
+    <!-- start of nav -->
     <header class="header-container">
       <nav class="header-menu">
         <div class="header-logo-container">
           <img
             class="header-logo"
-            src="m1proj layout/CODE KHAILEIDOSCOPE.png"
+            src="m1proj layout/CODE KHAILEIDOSCOPE.svg"
             alt=""
           />
         </div>
         <ul class="header-items">
-          <li><a href="#">ABOUT</a></li>
-          <li><a href="#">SKILLS</a></li>
-          <li><a href="#">PROJECTS</a></li>
-          <li><a href="#">CONTACT</a></li>
-          <li><a href="#">RESUME</a></li>
+          <li class="hitems"><a href="#">ABOUT</a></li>
+          <li class="hitems"><a href="#">SKILLS</a></li>
+          <li class="hitems"><a href="#">PROJECTS</a></li>
+          <li class="hitems"><a href="#">CONTACT</a></li>
+          <li class="hitems"><a href="#">RESUME</a></li>
         </ul>
       </nav>
+      <!-- end of nav -->
 
+      <!-- start of hero -->
       <main class="hero-container">
-        <div class="hero-details">
-          <h1 class="hero-details hello">Hello!</h1>
-          <h2 class="hero-details name">I'm John Michael Basalo</h2>
-          <h3 class="hero-details webdev">Full-Stack Web Developer</h3>
-          <button class="hero-btn">CONTACT ME</button>
-        </div>
-
         <div class="hero-image-container">
           <img class="hero-image" src="m1proj layout/main-image.svg" alt="" />
         </div>
+
+        <div class="hero-details">
+          <h1 class="hero-details hello">Hello! I'm</h1>
+          <h2 class="hero-details name">John Michael Basalo</h2>
+          <h3 class="hero-details webdev">Full-Stack Web Developer</h3>
+          <a class="hero-btn" href="#">CONTACT ME</a>
+        </div>
       </main>
     </header>
+    <!-- end of hero -->
+
+    <!-- start of about me -->
+    <div class="about-me-container">
+      <div class="about-me-details">
+        <h1 class="about-me-title">&lcub;about-me&rcub;</h1>
+        <p class="about-me-info">
+          I'm a newbie web developer with a strong passion for full-stack web
+          development. I'm currently immersing myself in the world of HTML, CSS,
+          and JavaScript for the front-end, while also eager to explore back-end
+          languages like Python and JavaScript.
+        </p>
+
+        <p class="about-me-info">
+          My goal is to create captivating websites that combine visually
+          stunning designs with seamless functionality.
+        </p>
+
+        <p class="about-me-info">
+          Join me on this exciting coding journey as I strive to learn, grow,
+          and make a positive impact in the digital realm. Let's build something
+          amazing together!
+        </p>
+      </div>
+    </div>
+    <!-- end of about me -->
+
+    <!-- start of skills -->
+    <div class="skill-container">
+      <h1 class="skill-title">MY <span>SKILLS</span></h1>
+      <img class="monitor" src="m1proj layout/monitor logo.svg" alt="" />
+      <div class="skill-image">
+        <img class="css" src="m1proj layout/css logo.svg" alt="" />
+        <img class="canva" src="m1proj layout/canva logo.svg" alt="" />
+        <img class="html" src="m1proj layout/html logo.svg" alt="" />
+      </div>
+    </div>
+    <!-- end of skills -->
+
+    <!-- start of projects -->
+    <div class="article-container">
+      <h1 class="article-title">PROJECTS</h1>
+      <section class="article-items">
+        <div class="article-item">
+          <img src="m1proj layout/comingsoon.svg" alt="" />
+          <p class="article-info">Project 1</p>
+        </div>
+
+        <div class="article-item">
+          <img src="m1proj layout/comingsoon.svg" alt="" />
+          <p class="article-info">Project 2</p>
+        </div>
+
+        <div class="article-item">
+          <img src="m1proj layout/comingsoon.svg" alt="" />
+          <p class="article-info">Project 3</p>
+        </div>
+
+        <div class="article-item">
+          <img src="m1proj layout/comingsoon.svg" alt="" />
+          <p class="article-info">Project 4</p>
+        </div>
+
+        <div class="article-item">
+          <img src="m1proj layout/comingsoon.svg" alt="" />
+          <p class="article-info">Project 5</p>
+        </div>
+
+        <div class="article-item">
+          <img src="m1proj layout/comingsoon.svg" alt="" />
+          <p class="article-info">Project 6</p>
+        </div>
+      </section>
+    </div>
+    <!-- end of projects -->
   </body>
 </html>
