--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <li><a href="10-advanced_positioning/">10 - advanced_positioning</a></li>
       <li><a href="11-responsive_design/">11 - Responsive Design</a></li>
       <li><a href="12-mp1_sample_project/">12 - MP1 Sample_Project</a></li>
-      <li><a href="../13-css_grid/"></a>13 - css_grid</li>
+      <li><a href="13-css_grid/">13 - css_grid</a></li>
     </ul>
   </body>
 </html>
