--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
       <li><a href="11-responsive_design/">11 - Responsive Design</a></li>
       <li><a href="12-mp1_sample_project/">12 - MP1 Sample_Project</a></li>
       <li><a href="13-css_grid/">13 - css_grid</a></li>
+      <li>
+        <a href="14-module1_final_activity/">14 - module1_final_activity</a>
+      </li>
     </ul>
   </body>
 </html>
