--- a/project1/index.html
+++ b/project1/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portfolio</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -17,6 +24,7 @@
             alt=""
           />
         </div>
+
         <ul class="header-items">
           <li class="hitems"><a href="#">ABOUT</a></li>
           <li class="hitems"><a href="#">SKILLS</a></li>
@@ -24,7 +32,19 @@
           <li class="hitems"><a href="#">CONTACT</a></li>
           <li class="hitems"><a href="#">RESUME</a></li>
         </ul>
+
+        <div class="toggle_btn">
+          <i class="fa-solid fa-bars"></i>
+        </div>
       </nav>
+
+      <div class="dropdown-items">
+        <li class="hitems"><a href="#">ABOUT</a></li>
+        <li class="hitems"><a href="#">SKILLS</a></li>
+        <li class="hitems"><a href="#">PROJECTS</a></li>
+        <li class="hitems"><a href="#">CONTACT</a></li>
+        <li class="hitems"><a href="#">RESUME</a></li>
+      </div>
       <!-- end of nav -->
 
       <!-- start of hero -->
@@ -34,9 +54,9 @@
         </div>
 
         <div class="hero-details">
-          <h1 class="hero-details hello">Hello! I'm</h1>
-          <h2 class="hero-details name">John Michael Basalo</h2>
-          <h3 class="hero-details webdev">Full-Stack Web Developer</h3>
+          <h1 class="hello">Hello! I'm</h1>
+          <h2 class="name">John Michael Basalo</h2>
+          <h3 class="webdev">Full-Stack Web Developer</h3>
           <a class="hero-btn" href="#">CONTACT ME</a>
         </div>
       </main>
@@ -116,5 +136,21 @@
       </section>
     </div>
     <!-- end of projects -->
+
+    <!-- dropdown script -->
+    <script>
+      const toggleBtn = document.querySelector(".toggle_btn");
+      const toggleBtnIcon = document.querySelector(".toggle_btn i");
+      const dropDownMenu = document.querySelector(".dropdown-items");
+
+      toggleBtn.onclick = function () {
+        dropDownMenu.classList.toggle("open");
+        const isOpen = dropDownMenu.classList.contains("open")
+        
+        toggleBtnIcon.classList = isOpen
+        ? 'fa-solid  fa-xmark'
+        : 'fa-solid  fa-bars';
+      };
+    </script>
   </body>
 </html>
