--- a/project1/index.html
+++ b/project1/index.html
@@ -65,8 +65,8 @@
 
     <!-- start of about me -->
     <div class="about-me-container">
+      <h1 class="about-me-title">ABOUT ME</h1>
       <div class="about-me-details">
-        <h1 class="about-me-title">&lcub;about-me&rcub;</h1>
         <p class="about-me-info">
           I'm a newbie web developer with a strong passion for full-stack web
           development. I'm currently immersing myself in the world of HTML, CSS,
@@ -145,11 +145,11 @@
 
       toggleBtn.onclick = function () {
         dropDownMenu.classList.toggle("open");
-        const isOpen = dropDownMenu.classList.contains("open")
-        
+        const isOpen = dropDownMenu.classList.contains("open");
+
         toggleBtnIcon.classList = isOpen
-        ? 'fa-solid  fa-xmark'
-        : 'fa-solid  fa-bars';
+          ? "fa-solid  fa-xmark"
+          : "fa-solid  fa-bars";
       };
     </script>
   </body>
