udpated responsiveness on article unfinished

--- a/project1/index.html
+++ b/project1/index.html
@@ -104,32 +104,32 @@
     <div class="article-container">
       <h1 class="article-title">PROJECTS</h1>
       <section class="article-items">
-        <div class="article-item">
+        <div class="article-details">
           <img src="m1proj layout/comingsoon.svg" alt="" />
           <p class="article-info">Project 1</p>
         </div>
 
-        <div class="article-item">
+        <div class="article-details">
           <img src="m1proj layout/comingsoon.svg" alt="" />
           <p class="article-info">Project 2</p>
         </div>
 
-        <div class="article-item">
+        <div class="article-details">
           <img src="m1proj layout/comingsoon.svg" alt="" />
           <p class="article-info">Project 3</p>
         </div>
 
-        <div class="article-item">
+        <div class="article-details">
           <img src="m1proj layout/comingsoon.svg" alt="" />
           <p class="article-info">Project 4</p>
         </div>
 
-        <div class="article-item">
+        <div class="article-details">
           <img src="m1proj layout/comingsoon.svg" alt="" />
           <p class="article-info">Project 5</p>
         </div>
 
-        <div class="article-item">
+        <div class="article-details">
           <img src="m1proj layout/comingsoon.svg" alt="" />
           <p class="article-info">Project 6</p>
         </div>
