added folder 15 bootstrap library

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       <li>
         <a href="14-module1_final_activity/">14 - module1_final_activity</a>
       </li>
+      <li><a href="15-bootstrap_library/">15 - bootstrap_library</a></li>
     </ul>
   </body>
 </html>
