added projects unfinished not responsive

--- a/project_1/index.html
+++ b/project_1/index.html
@@ -65,8 +65,8 @@
     <!-- end of hero -->
 
     <!-- start of about me -->
-    <div class="about-me-container">
-      <h4 class="about-me-title" id="about">ABOUT ME</h4>
+    <div class="about-me-container" id="about">
+      <h4 class="about-me-title">ABOUT ME</h4>
       <div class="about-me-details">
         <p class="about-me-info">
           I'm a newbie web developer with a strong passion for full-stack web
@@ -91,47 +91,48 @@
 
     <!-- start of skills -->
     <div class="skill-container">
-      <h1 class="skill-title">MY <span>SKILLS</span></h1>
-      <img class="monitor" src="m1proj layout/monitor logo.svg" alt="" />
+      <h4 class="skill-title" id="skills">MY <span>SKILLS</span></h4>
+      <img class="monitor" src="img/laptop.png" alt="" />
       <div class="skill-image">
-        <img class="css" src="m1proj layout/css logo.svg" alt="" />
-        <img class="canva" src="m1proj layout/canva logo.svg" alt="" />
-        <img class="html" src="m1proj layout/html logo.svg" alt="" />
+        <img class="css" src="img/css logo.svg" alt="" />
+        <img class="html" src="img/html logo.svg" alt="" />
+        <img class="psd" src="img/photoshop logo.svg" alt="" />
+        <img class="canva" src="img/canva logo.svg" alt="" />
       </div>
     </div>
     <!-- end of skills -->
 
     <!-- start of projects -->
     <div class="article-container">
-      <h1 class="article-title">PROJECTS</h1>
+      <h4 class="article-title">PROJECTS</h4>
       <section class="article-items">
         <div class="article-details">
-          <img src="m1proj layout/comingsoon.svg" alt="" />
+          <img src="img/comingsoon.svg" alt="" />
           <p class="article-info">Project 1</p>
         </div>
 
         <div class="article-details">
-          <img src="m1proj layout/comingsoon.svg" alt="" />
+          <img src="img/comingsoon.svg" alt="" />
           <p class="article-info">Project 2</p>
         </div>
 
         <div class="article-details">
-          <img src="m1proj layout/comingsoon.svg" alt="" />
+          <img src="img/comingsoon.svg" alt="" />
           <p class="article-info">Project 3</p>
         </div>
 
         <div class="article-details">
-          <img src="m1proj layout/comingsoon.svg" alt="" />
+          <img src="img/comingsoon.svg" alt="" />
           <p class="article-info">Project 4</p>
         </div>
 
         <div class="article-details">
-          <img src="m1proj layout/comingsoon.svg" alt="" />
+          <img src="img/comingsoon.svg" alt="" />
           <p class="article-info">Project 5</p>
         </div>
 
         <div class="article-details">
-          <img src="m1proj layout/comingsoon.svg" alt="" />
+          <img src="img/comingsoon.svg"alt="" />
           <p class="article-info">Project 6</p>
         </div>
       </section>
