added forms unresponsive

--- a/12-mp1_sample_project/index.html
+++ b/12-mp1_sample_project/index.html
@@ -50,6 +50,33 @@
           </div>
         </section>
         <hr />
+
+        <div class="skills-container">
+          <div>
+            <h2>HTML</h2>
+            <p>4 Years Experience</p>
+          </div>
+          <div>
+            <h2>CSS</h2>
+            <p>4 Years Experience</p>
+          </div>
+          <div>
+            <h2>Javascript</h2>
+            <p>4 Years Experience</p>
+          </div>
+          <div>
+            <h2>Accessibility</h2>
+            <p>4 Years Experience</p>
+          </div>
+          <div>
+            <h2>React</h2>
+            <p>3 Years Experience</p>
+          </div>
+          <div>
+            <h2>Sass</h2>
+            <p>3 Years Experience</p>
+          </div>
+        </div>
       </header>
     </main>
   </body>
