--- a/project_1/index.html
+++ b/project_1/index.html
@@ -148,7 +148,7 @@
             <i class="fa-regular fa-user"></i> John Michael Basalo
           </li>
           <li class="cta-details">
-            <i class="fa-regular fa-envelope"></i> jomaikoh+github@gmail.com
+            <i class="fa-regular fa-envelope"></i> jomaikoh@gmail.com
           </li>
           <li class="cta-details">
             <i class="fa-solid fa-phone"></i> +63 917 691 8471
@@ -160,7 +160,7 @@
       </div>
 
       <div class="form-ctr">
-        <h5 class="form-title">E-Mail Us</h5>
+        <h5 class="form-title">E-mail Us</h5>
         <form class="form-details" action="">
           <p>
             <label for="name">Full Name</label>
@@ -175,7 +175,7 @@
           <p>
             <label for="e-mail">E-Mail Address</label>
             <input
-              type="text"
+              type="email"
               name="e-mail"
               id="e-mail"
               placeholder="enter email address"
@@ -222,7 +222,36 @@
     <!-- end of forms -->
 
     <!-- start of footer -->
-
+    <footer>
+      <h5>Khaileidoscope&copy;</h5>
+      <ul class="f-icons">
+        <li>
+          <a href="#">
+            <i class="fa-brands fa-square-facebook"></i>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <i class="fa-brands fa-linkedin"></i>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <i class="fa-brands fa-square-x-twitter"></i>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <i class="fa-brands fa-instagram"></i>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <i class="fa-brands fa-square-github"></i>
+          </a>
+        </li>
+      </ul>
+    </footer>
     <!-- dropdown script -->
     <script>
       const toggleBtn = document.querySelector(".toggle_btn");
